syntax = "proto3";



service UserService{
    rpc Create(User)returns (User);
    rpc Get(GetRequest)returns(User);
    rpc List(GetAllUsersRequest)returns (GetAllUsersResponse);
    rpc Update(User)returns(User);
    rpc IsUnique(IsUniqueRequest)returns(isUniqueResponse);
    rpc Delete(DeleteRequest) returns(DeleteResponse);
    rpc UpdateUserRefreshToken(UpdateRefreshToken)returns (UpdateRefreshTokenResponse);
};






message IsUniqueRequest{
    string field = 1;
    string value = 2;
}
message isUniqueResponse{
    bool isUnique = 1;
}

message User {
    string id = 1;
    string name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string created_at =6;
    string updated_at = 7;
    string deleted_at = 8;
    string refresh_token = 9;
    string role = 10;
}

message UserWithPost {
    string id = 1;
    string name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string created_at =6;
    string updated_at = 7;
    string deleted_at = 8;
    repeated UserPost posts = 9;
}

message DeleteRequest{
    string field = 1;
    string value = 2;
}

message GetAllUsersResponse{
    repeated User users = 1;
}

message DeleteResponse{}

message GetAllUsersRequest {
    int64 page = 1;
    int64 limit = 2;
}

message GetAllUsersWithPostResponse {
    repeated UserWithPost users = 1;
}

message GetRequest{
    string field = 1;
    string useroremail = 2;
}

message UserPost {
    string id = 1;
    string title = 2;
    string image_url = 3;

}

message UpdateRefreshToken {
    string id = 1;
    string refreshToken = 2;
}
message UpdateRefreshTokenResponse{}

